Fix cors config