@@ -20,8 +20,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.time.Duration;
-import java.util.Collections;
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 @EnableWebSecurity
@@ -45,8 +44,11 @@ public class SecurityConfig {
     @Bean
     public CorsConfiguration corsConfiguration() {
         CorsConfiguration corsConfiguration = new CorsConfiguration();
-        corsConfiguration.setAllowedOrigins(Collections.singletonList("*"));
-        corsConfiguration.setAllowedMethods(List.of("OPTIONS", "GET", "POST", "PATCH", "DELETE"));
+//        corsConfiguration.setAllowedOrigins(List.of("http://localhost:3000", "http://70.12.245.30:3000"));
+//        corsConfiguration.setAllowedMethods(List.of("OPTIONS", "GET", "POST", "PATCH", "PUT", "DELETE"));
+        corsConfiguration.setAllowedOrigins(Arrays.asList("*"));
+        corsConfiguration.setAllowedMethods(Arrays.asList("OPTIONS", "GET", "POST", "PATCH", "PUT", "DELETE"));
+        corsConfiguration.setAllowedHeaders(Arrays.asList("*"));
         corsConfiguration.setMaxAge(Duration.ofMinutes(30));
         return corsConfiguration;
     }
